# ChessAI

./: .gitignore  CMakeLists.txt  README.md  best_moves.txt  build_run.sh  chess_board_data.cpp  chess_main.cpp  chess_stockfish_move_converter.cpp  clean_data.sh  neural_net_data.py  neural_net_models.py  neural_net_train.py  requirements.txt  run.sh  sample_games.fen  stockfish_evaluator.py  train.sh
data/: sample_games.fen
src/: CMakeLists.txt  chess.hpp  chess_board.cpp  chess_board.h  chess_castle_rights.h  chess_color.h  chess_moves.cpp  chess_moves.h  chess_parser.cpp  chess_parser.h  chess_piece.h  chess_square.h  chess_square_utils.h
